--- a/interviewKickstart/interviewKickstart.ipynb
+++ b/interviewKickstart/interviewKickstart.ipynb
@@ -36,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <span style=\"color: red;\">Note that in the following discussion we sometimes discuss direct applications to machine learning in this red font!</span>"
+    "### <span style=\"color: green;\">Note that in the following discussion we sometimes discuss direct applications to machine learning in green!</span>"
    ]
   },
   {
@@ -66,7 +66,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## We will review finite distributions first.  "
+    "## A brief review of _finite_ distributions.  "
    ]
   },
   {
@@ -207,7 +207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <span style=\"color: red;\">An example of the use of the Bernouilli distribution in machine learning would be a two class classification problem, for example the cats and dogs problem.</span>"
+    "### <span style=\"color: green;\">An example of the use of the Bernouilli distribution in machine learning would be a two class classification problem, for example the cats and dogs problem.</span>"
    ]
   },
   {
@@ -315,14 +315,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <span style=\"color: red;\">An example of the use of the categorical distribution in machine learning is the distribution over digits in the MNIST problem.</span>"
+    "### <span style=\"color: green;\">An example of the use of the categorical distribution in machine learning is the distribution over digits in the MNIST problem.</span>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Discrete distributions generalize finite distributions.  "
+    "## A brief review of _discrete_ distributions, which generalize finite distributions.  "
    ]
   },
   {
@@ -418,7 +418,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <span style=\"color: red;\">An example of the use of the Poisson distribution in machine learning is Poisson regression where the mean is dependent on regressors x through the coefficients $$\\mu(x) = e^{\\theta x}$$ This \"machine learning\" example is an example of generalized linear regression and \"training\" this model means we solve for the coefficients $\\theta$.  Can you think of a way to use a nonlinear model for the mean $\\mu$?\n",
+    "### <span style=\"color: green;\">An example of the use of the Poisson distribution in machine learning is Poisson regression where the mean is linearly dependent on regressors x through coefficients: $$\\mu(x) = e^{\\theta x}$$ This machine learning example is an example of generalized linear regression and \"training\" this model means we estimate the coefficients $\\theta$.  Can you think of a way to use a nonlinear model for the mean $\\mu$?  \n",
     "</span>\n"
    ]
   },
@@ -426,14 +426,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Recall multivariate distributions (which give the probabilities for the outcomes of two or more random variables):"
+    "## A brief review of _multivariate_ distributions, which give the probabilities for the outcomes of two or more random variables."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For example, toss two fair die independently.  Then $$\\text{Pr}(d_1 = 2, d_2 = 5) = \\frac{1}{6} \\cdot \\frac{1}{6} = \\frac{1}{36}$$"
+    "For example, toss one fair die and one fair coin independently.  Then $$\\text{Pr}(d = 4, c = 1) = \\frac{1}{6} \\cdot \\frac{1}{2} = \\frac{1}{12}$$"
    ]
   },
   {
@@ -447,7 +447,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### <span style=\"color: blue;\">Warning:  The following discussion is mathematically simplied and if you decide to dig deeper into probability theory you will find that some of the ideas below will have to be modified.  However for most practical applications this discussion suffices.</span>"
+    "##### <span style=\"color: red;\">Warning:  The following discussion is mathematically simplied and if you decide to dig deeper into probability theory you will find that some of the ideas below will have to be modified.</span>"
    ]
   },
   {
@@ -470,20 +470,19 @@
    "source": [
     "### Uniform Distribution on the interval $[a,b]$:\n",
     "\n",
+    "$$f(x) = \n",
+    "\\begin{cases}\n",
+    "      \\frac{1}{b-a} & a\\leq x\\leq b \\\\\n",
+    "      0 & \\text{otherwise}\n",
+    "\\end{cases}\n",
+    "$$\n",
+    "\\\n",
     "$$F(x)=\n",
     "\\begin{cases} \n",
     "      0 & x < a \\\\\n",
     "      \\frac{x-a}{b-a} & a\\leq x\\leq b \\\\\n",
     "      1 & x > b \n",
     "   \\end{cases}\n",
-    "$$\n",
-    "\\\n",
-    "\n",
-    "$$f(x) = \n",
-    "\\begin{cases}\n",
-    "      \\frac{1}{b-a} & a\\leq x\\leq b \\\\\n",
-    "      0 & \\text{otherwise}\n",
-    "\\end{cases}\n",
     "$$\n",
     "\n"
    ]
@@ -497,13 +496,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3286281cac7144d2a31960565d96eed8",
+       "model_id": "4b14ad4bd75d4972960e6d6b7b7d74cd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -550,13 +549,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2e6eb1075e7549bd956be5e043cbeab2",
+       "model_id": "e73b54f4e63a4cbaa522c8915f613fb9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -605,18 +604,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Plot the Normal density function:"
+    "Plot the normal density function:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "794fdb50354c49ceab83ce926320d186",
+       "model_id": "7b9e68363b6842a0a4fe9521d287ec82",
        "version_major": 2,
        "version_minor": 0
       },
@@ -663,13 +662,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "354bc7a2e33b4710b7bcd120d8b2e9f1",
+       "model_id": "d1240e3262d6424fa2daf475bedf68ae",
        "version_major": 2,
        "version_minor": 0
       },
@@ -706,7 +705,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###  The Normal distribution is not as \"obvious\" as the uniform distribution.  Where does it come from?  Why do we care about it? Well, the Normal distribution is fundamental to the _Central Limit Theorem_! This theorem says that if we have a set of random variables $\\{X_i\\}$ which are independent and identically distributed (\"iid\") then the average of the variables $Z = \\frac{X_1 + \\cdots + X_n}{n}$, which is ALSO a random variable, has a normal distribution."
+    "###  The normal distribution is not as \"obvious\" as the uniform distribution.  Where does it come from?  Why do we care about it? Well, the normal distribution is fundamental to the _Central Limit Theorem_! This theorem says that if we have a set of random variables $\\{X_i\\}$ which are independent and identically distributed (\"iid\") then the average of the variables $Z = \\frac{X_1 + \\cdots + X_n}{n}$, which is ALSO a random variable, has a normal distribution."
    ]
   },
   {
@@ -718,13 +717,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "30bbbeb611c64c6297ec41c99280d907",
+       "model_id": "2e55a3a89c1a4407b05eb659ed8bf1eb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -871,7 +870,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### <span style=\"color: blue;\">Warning: \"Stochastic\" is just a fancy word for \"random.\"</span>"
+    "##### <span style=\"color: red;\">Warning: \"Stochastic\" is just a fancy word for \"random.\"</span>"
    ]
   },
   {
