--- a/interviewKickstart/interviewKickstart.ipynb
+++ b/interviewKickstart/interviewKickstart.ipynb
@@ -767,7 +767,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### There are MANY continuous distributions.  See Wikipedia for a long list.  Our final example with be the Dirichlet distribution which is a distribution over finite distributions!"
+    "### There are MANY continuous distributions.  See Wikipedia for a long list.  Our final example will be the Dirichlet distribution which is a distribution over finite distributions!  Instead of looking at formulas, which you can investigate on Wikipedia and elsewhere, we'll try to understand through some images."
    ]
   },
   {
@@ -857,6 +857,14 @@
    "source": [
     "alpha = [2., 2., 2.]\n",
     "scipy.stats.dirichlet.rvs(alpha, size = 5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <span style=\"color: green;\">In machine learning, the Dirichlet distribution is used in a _topic model_ called _Latent Dirichlet Allocation_.  Topic models are examples of _Bayesian natural language models (NLP)_.  Dirichlet distributions are also used in other Bayesian machine learning models. \n",
+    "</span>\n"
    ]
   },
   {
