--- a/interviewKickstart/interviewKickstart.ipynb
+++ b/interviewKickstart/interviewKickstart.ipynb
@@ -25,7 +25,7 @@
     "    1.  Probability density function.\n",
     "    1.  Cumulative distribution function.\n",
     "    1.  Examples of continuous distributions.\n",
-    "    1. Continuous distributions - computing and calculating.\n",
+    "    1.  Computing and calculating with scipy.stats\n",
     "1. Looking forward: stochastic processeses, i.e. \"infinite dimensional\" multivariate discrete/continuous distributions. \n",
     "\n",
     "<br>\n",
@@ -36,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <span style=\"color: green;\">Note that in the following discussion we sometimes discuss direct applications to machine learning in green!</span>"
+    "### <span style=\"color: green;\">Note that in the following discussion we highlight direct applications to machine learning in green!</span>"
    ]
   },
   {
