--- a/interviewKickstart/interviewKickstart.ipynb
+++ b/interviewKickstart/interviewKickstart.ipynb
@@ -304,10 +304,10 @@
     }
    ],
    "source": [
-    "nSample = 1\n",
+    "nSample = 3\n",
     "probs = (.1, .4, .2, .1, .1, .1)\n",
     "\n",
-    "multinomial = scipy.stats.multinomial(n=3, p=probs)\n",
+    "multinomial = scipy.stats.multinomial(n=nSample, p=probs)\n",
     "multinomial.rvs(5)"
    ]
   },
