--- a/interviewKickstart/interviewKickstart.ipynb
+++ b/interviewKickstart/interviewKickstart.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
        "(0.3, 0.21)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
        "array([0, 1, 1], dtype=int64)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,13 +161,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ef830a12f5b4444cb61840ba3477a06e",
+       "model_id": "6c5f4e45e5e246ada7112ef7d9b90f9b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -267,47 +267,48 @@
        "array([[0, 1, 0, 0, 0, 0],\n",
        "       [0, 0, 0, 0, 0, 1],\n",
        "       [0, 0, 0, 1, 0, 0],\n",
-       "       [0, 1, 0, 0, 0, 0],\n",
-       "       [0, 0, 1, 0, 0, 0]])"
+       "       [0, 0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0, 0]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "nTrial = 1\n",
     "probs = (.1, .4, .2, .1, .1, .1)\n",
     "\n",
-    "categorical = scipy.stats.multinomial(n=1, p=probs)\n",
+    "categorical = scipy.stats.multinomial(n=nTrial, p=probs)\n",
     "categorical.rvs(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1, 0, 2, 0, 0, 0],\n",
-       "       [0, 2, 0, 1, 0, 0],\n",
-       "       [1, 1, 0, 1, 0, 0],\n",
-       "       [0, 0, 2, 1, 0, 0],\n",
-       "       [0, 1, 0, 2, 0, 0]])"
+       "array([[1, 1, 0, 0, 1, 0],\n",
+       "       [0, 0, 1, 1, 0, 1],\n",
+       "       [0, 1, 1, 1, 0, 0],\n",
+       "       [0, 2, 1, 0, 0, 0],\n",
+       "       [1, 0, 1, 0, 0, 1]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nSample = 3\n",
+    "nTrial = 3\n",
     "probs = (.1, .4, .2, .1, .1, .1)\n",
     "\n",
-    "multinomial = scipy.stats.multinomial(n=nSample, p=probs)\n",
+    "multinomial = scipy.stats.multinomial(n=nTrial, p=probs)\n",
     "multinomial.rvs(5)"
    ]
   },
@@ -418,7 +419,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <span style=\"color: green;\">An example of the use of the Poisson distribution in machine learning is Poisson regression where the mean is linearly dependent on regressors x through coefficients: $$\\mu(x) = e^{\\theta x}$$ This machine learning example is an example of generalized linear regression and \"training\" this model means we estimate the coefficients $\\theta$.  Can you think of a way to use a nonlinear model for the mean $\\mu$?  \n",
+    "### <span style=\"color: green;\">An example of the use of the Poisson distribution in machine learning is Poisson regression where the mean is linearly dependent on regressors x through coefficients: $$\\mu(x) = e^{\\theta x}$$ This machine learning example is an example of generalized linear regression and \"training\" this model means we estimate the coefficient vector $\\theta$.  Can you think of a way to use a nonlinear model for the mean $\\mu$?  \n",
     "</span>\n"
    ]
   },
@@ -496,13 +497,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4b14ad4bd75d4972960e6d6b7b7d74cd",
+       "model_id": "ac26a142e9274f4f866526c0ae980541",
        "version_major": 2,
        "version_minor": 0
       },
@@ -609,13 +610,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7b9e68363b6842a0a4fe9521d287ec82",
+       "model_id": "500b6d9fa26a49f5bbb306b8e062a72e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -705,6 +706,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "###  The normal distribution is not as \"obvious\" as the uniform distribution.  Where does it come from?  Why do we care about it? Well, the normal distribution is fundamental to the _Central Limit Theorem_! This theorem says that if we have a set of random variables $\\{X_i\\}$ which are independent and identically distributed (\"iid\") then the average of the variables $Z = \\frac{X_1 + \\cdots + X_n}{n}$, which is ALSO a random variable, has a normal distribution."
    ]
   },
