--- a/interviewKickstart/interviewKickstart.ipynb
+++ b/interviewKickstart/interviewKickstart.ipynb
@@ -254,7 +254,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can create a general finite random variable using the multinomial distribution with one trial:"
+    "We can create a general finite random variable, called a _categorical_ random variable using the multinomial distribution with one trial:"
    ]
   },
   {
@@ -524,13 +524,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "891c354539d042cc9536e02ca6481b63",
+       "model_id": "b2aca240b7574575a643ba1bc6a1a684",
        "version_major": 2,
        "version_minor": 0
       },
