--- a/packets/packetTest.ipynb
+++ b/packets/packetTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "9c04a961-4969-4b8b-b45c-19c7dbc9a887",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "a8951912",
    "metadata": {},
    "outputs": [
@@ -92,10 +92,14 @@
        " <TCP/PKIX-CERT Packet>,\n",
        " <TCP/DATA-TEXT-LINES Packet>,\n",
        " <UDP/NTP Packet>,\n",
-       " <UDP/DHCPV6 Packet>]"
+       " <UDP/DHCPV6 Packet>,\n",
+       " <TCP/PNG Packet>,\n",
+       " <UDP/BJNP Packet>,\n",
+       " <TCP/JSON Packet>,\n",
+       " <UDP/STUN Packet>]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
