--- a/packets/packetTest.ipynb
+++ b/packets/packetTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "9c04a961-4969-4b8b-b45c-19c7dbc9a887",
    "metadata": {},
    "outputs": [],
@@ -22,10 +22,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "id": "51192802",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\jetti\\mambaforge\\envs\\scapy\\Lib\\site-packages\\pyshark\\capture\\capture.py:177: UserWarning: The running eventloop has tasks but pyshark must set a new eventloop to continue. Existing tasks may not run.\n",
+      "  warnings.warn(\"The running eventloop has tasks but pyshark must set a new eventloop to continue. \"\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: ..\\..\\..\\OneDrive\\Desktop\\sampleCap.pcapng",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\jetti\\github\\python\\packets\\packetTest.ipynb Cell 3\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/jetti/github/python/packets/packetTest.ipynb#W2sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m cap \u001b[39m=\u001b[39m pyshark\u001b[39m.\u001b[39;49mFileCapture(\u001b[39m\"\u001b[39;49m\u001b[39m../../../OneDrive/Desktop/sampleCap.pcapng\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
+      "File \u001b[1;32mc:\\Users\\jetti\\mambaforge\\envs\\scapy\\Lib\\site-packages\\pyshark\\capture\\file_capture.py:47\u001b[0m, in \u001b[0;36mFileCapture.__init__\u001b[1;34m(self, input_file, keep_packets, display_filter, only_summaries, decryption_key, encryption_type, decode_as, disable_protocol, tshark_path, override_prefs, use_json, use_ek, output_file, include_raw, eventloop, custom_parameters, debug)\u001b[0m\n\u001b[0;32m     45\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39minput_filepath \u001b[39m=\u001b[39m pathlib\u001b[39m.\u001b[39mPath(input_file)\n\u001b[0;32m     46\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39minput_filepath\u001b[39m.\u001b[39mexists():\n\u001b[1;32m---> 47\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mFileNotFoundError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m[Errno 2] No such file or directory: \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39minput_filepath\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     48\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39minput_filepath\u001b[39m.\u001b[39mis_file():\n\u001b[0;32m     49\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mFileNotFoundError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39minput_filepath\u001b[39m}\u001b[39;00m\u001b[39m is a directory\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: ..\\..\\..\\OneDrive\\Desktop\\sampleCap.pcapng"
+     ]
+    }
+   ],
    "source": [
     "cap = pyshark.FileCapture(\"../../../OneDrive/Desktop/sampleCap.pcapng\")"
    ]
