--- a/computationalCategories/categories.ipynb
+++ b/computationalCategories/categories.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,13 +25,33 @@
     "    def __str__(self) -> str:\n",
     "        return str((self.src, self.target, self.comp))\n",
     "\n",
+    "    # Check that all the composables have matching targets and sources.\n",
     "    def composabilityCheck(self)-> bool:\n",
+    "        for second,first in self.comp.keys():\n",
+    "            if self.target[first] != self.src[second]:\n",
+    "                print(\"Composability violation...\")\n",
+    "                return False\n",
     "        return True\n",
     "    \n",
+    "    # Check that any two composable morphisms have a name\n",
     "    def compositionCheck(self) -> bool:\n",
+    "        for first in self.morphisms:\n",
+    "            for second in self.morphisms:\n",
+    "                if self.src[second] == self.target[first]:\n",
+    "                    if (second, first) not in self.comp.keys():\n",
+    "                        print(\"Composables lack a name...\")\n",
+    "                        return False\n",
     "        return True\n",
     "    \n",
+    "    # Check associativity\n",
     "    def associativityCheck(self) -> bool:\n",
+    "        for first in self.morphisms:\n",
+    "            for second in self.morphisms:\n",
+    "                for third in self.morphisms:\n",
+    "                    if (self.src[third] == self.target[second]) and (self.src[second] == self.target[first]):\n",
+    "                        if self.comp[(third, self.comp[second, first])] != self.comp[(self.comp[third, second], first)]:\n",
+    "                            print(\"Associativty failure...\")\n",
+    "                            return False\n",
     "        return True\n",
     "    \n",
     "    def addIdentities(self) -> None:\n",
@@ -62,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +532,7 @@
        " (('id_3', 'id_3'), ('id_3', 'id_3')): ('id_3', 'id_3')}"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,92 +547,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Check that all the composables defined by equations have matching targets and sources.\n",
-    "function checkComposability(c::Category, debug::Bool=false)\n",
-    "\n",
-    "    for thisEquality in c.relations\n",
-    "        if !occursin(\"~\", string(thisEquality.left))\n",
-    "            second, first = thisEquality.left.args \n",
-    "            second = string(second)\n",
-    "            first = string(first)\n",
-    "            \n",
-    "            if c.src[second] != c.target[first]\n",
-    "                if debug\n",
-    "                    println(\"composability violation\")\n",
-    "                    println(first,second)\n",
-    "                    println(\" \")\n",
-    "                end\n",
-    "                return false\n",
-    "            end\n",
-    "        end\n",
-    "    end\n",
-    "    return true\n",
-    "end\n",
-    "\n",
-    "#Check that the composition of any two arrows with matching sources and targets has a name by brute force\n",
-    "function checkComposition(c::Category, debug::Bool=false) :: Bool\n",
-    "    \n",
-    "    morphisms = [morph for morph in keys(c.src) if !occursin(\"id\", morph)]\n",
-    "    for i in morphisms\n",
-    "        for j in morphisms\n",
-    "            if c.target[i] == c.src[j]\n",
-    "                simplified = simplifyComposition(i, j, c.relations, c.identityRelations)\n",
-    "\n",
-    "                if occursin(\"comp\", simplified)\n",
-    "                    if debug\n",
-    "                        println(\"missing composition name: \")\n",
-    "                        println(thisComposition)\n",
-    "                        println(\" \")\n",
-    "                    end\n",
-    "                    return false\n",
-    "                end\n",
-    "            end\n",
-    "        end\n",
-    "    end\n",
-    "    return true\n",
-    "end;\n",
-    "\n",
-    "# Check that category c satisfies associativity by brute force\n",
-    "function checkAssociativity(c::Category, debug::Bool = false) :: Bool\n",
-    "    morphisms = keys(c.src)\n",
-    "    relations = c.relations\n",
-    "    identityRelations = c.identityRelations\n",
-    "\n",
-    "    println(\"Checking associativity...\")\n",
-    "    for i in morphisms\n",
-    "        for j in morphisms\n",
-    "            for k in morphisms\n",
-    "                if (c.target[i] == c.src[j]) && (c.target[j] == c.src[k])\n",
-    "                    if occursin(\"id\", i * j * k)\n",
-    "                        continue\n",
-    "                    end\n",
-    "                    leftAssocLeft = simplifyComposition(i, j, relations, identityRelations)\n",
-    "                    leftAssoc = simplifyComposition(leftAssocLeft, k, relations, identityRelations)\n",
-    "                    rightAssocRight = simplifyComposition(j, k, relations, identityRelations)\n",
-    "                    rightAssoc = simplifyComposition(i, rightAssocRight, relations, identityRelations)\n",
-    "                    if leftAssoc != rightAssoc\n",
-    "                        if debug\n",
-    "                            print(\"associativity violation: \")\n",
-    "                            println(k,j,i)\n",
-    "                            println(leftAssocLeft)\n",
-    "                            println(leftAssoc)\n",
-    "                            println(rightAssocRight)\n",
-    "                            println(rightAssoc)\n",
-    "                            println(\" \")\n",
-    "                        end\n",
-    "\n",
-    "                        return false\n",
-    "                    end\n",
-    "                end\n",
-    "            end\n",
-    "        end\n",
-    "    end\n",
-    "\n",
-    "    return true\n",
-    "end;\n",
-    "\n",
-    "\n",
-    "\n",
     "function homomorphismFunctorCheck(functor)\n",
     "    srcCat = functor.srcCat\n",
     "    targetCat = functor.targetCat\n",
