--- a/computationalCategories/categories.ipynb
+++ b/computationalCategories/categories.ipynb
@@ -2,25 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Category:\n",
-    "    def __init__(self, src:dict, target:dict, comp:dict, addIdentities:bool = False) -> None:\n",
+    "    def __init__(self, src:dict, target:dict, comp:dict, identityMap:dict = {}) -> None:\n",
     "        self.src = src\n",
     "        self.target = target\n",
     "        self.comp = comp\n",
     "        self.objects = set(src.values()).union(set(target.values()))\n",
     "        self.morphisms = list(src.keys())\n",
+    "        self.identityMap = identityMap\n",
     "\n",
-    "        assert src.keys() == target.keys()\n",
+    "        if identityMap == {}:\n",
+    "            self.addIdentities()\n",
+    "\n",
+    "        assert set(identityMap.keys()) == self.objects\n",
+    "        assert self.src.keys() == self.target.keys()\n",
     "        assert self.composabilityCheck()\n",
     "        assert self.compositionCheck()\n",
     "        assert self.associativityCheck()\n",
-    "\n",
-    "        if addIdentities:\n",
-    "            self.addIdentities()\n",
     "        \n",
     "    def __repr__(self) -> str:\n",
     "        return self.__str__()\n",
@@ -63,6 +65,7 @@
     "            self.src[thisMorphism] = thisObject\n",
     "            self.target[thisMorphism] = thisObject\n",
     "            self.morphisms = self.morphisms + [thisMorphism]\n",
+    "            self.identityMap[thisObject] = thisMorphism\n",
     "            for i in self.morphisms:\n",
     "                if self.src[i] == thisObject:\n",
     "                    self.comp[(i, thisMorphism)] = i\n",
@@ -77,18 +80,31 @@
     "        self.objectMap = objectMap\n",
     "        self.morphismMap = morphismMap\n",
     "\n",
+    "        assert self.identityCheck()\n",
     "        assert self.homomorphismFunctorCheck()\n",
     "\n",
     "    def __str__(self) -> str:\n",
     "        return str((self.srcCat, self.targetCat, self.objectMap, self.morphismMap))\n",
     "    \n",
+    "    def identityCheck(self) -> bool:\n",
+    "        for ob,thisID in self.srcCat.identityMap.items():\n",
+    "            if self.morphismMap[thisID] != self.targetCat.identityMap[self.objectMap[ob]]:\n",
+    "                print(\"Functor does not preserve identities...\")\n",
+    "                return False\n",
+    "        return True\n",
+    "\n",
+    "\n",
     "    def homomorphismFunctorCheck(self) -> bool:\n",
     "        for first in self.srcCat.morphisms:\n",
+    "\n",
+    "            # check that objects and morphisms are mapped consistently\n",
     "            srcViolation = self.objectMap[self.srcCat.src[first]] != self.targetCat.src[self.morphismMap[first]]\n",
     "            targetViolation = self.objectMap[self.srcCat.target[first]] != self.targetCat.target[self.morphismMap[first]]\n",
     "            if srcViolation or targetViolation:\n",
     "                print(\"Functor violation...\")\n",
     "                return False\n",
+    "            \n",
+    "            # check that composition is preserved\n",
     "            for second in self.srcCat.morphisms:\n",
     "                if self.srcCat.src[second] == self.srcCat.target[first]:\n",
     "                    srcComp = self.srcCat.comp[(second,first)]\n",
@@ -101,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +125,8 @@
     "    src = srcProduct(c, d)\n",
     "    target = targetProduct(c, d)\n",
     "    comp = compProduct(c,d)\n",
-    "    productCat = Category(src, target, comp, addIdentities=False)\n",
+    "    identityMap = identityMapProduct(c,d)\n",
+    "    productCat = Category(src, target, comp, identityMap)\n",
     "    return productCat\n",
     "\n",
     "def srcProduct(c:Category, d:Category):\n",
@@ -122,12 +139,16 @@
     "    \n",
     "def compProduct(c:Category, d:Category):\n",
     "    comp = {((m1Source[0],m2Source[0]), (m1Source[1],m2Source[1])):(m1Target, m2Target) for m1Source, m1Target in c.comp.items() for m2Source, m2Target in d.comp.items()}\n",
-    "    return comp"
+    "    return comp\n",
+    "\n",
+    "def identityMapProduct (c:Category, d:Category):\n",
+    "    identityMap = {(ob1, ob2): (id1, id2) for ob1,id1 in c.identityMap.items() for ob2,id2 in d.identityMap.items()}\n",
+    "    return identityMap"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,8 +156,8 @@
     "target = {\"f\":1, \"g\":2, \"h\":3, \"i\":2, \"m\":3, \"k\":3}\n",
     "comp = {(\"g\",\"f\"): \"i\", (\"h\", \"g\"):\"k\", (\"h\",\"i\"): \"m\", (\"k\",\"f\"): \"m\"}\n",
     "\n",
-    "c1 = Category(src, target, comp, True)\n",
-    "c2 = Category(src, target, comp, True)\n",
+    "c1 = Category(src, target, comp, {})\n",
+    "c2 = Category(src, target, comp, {})\n",
     "\n",
     "productC1C2 = productCategory(c1, c2)\n",
     "\n",
@@ -147,20 +168,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(({'f': 0, 'g': 1, 'h': 2, 'i': 0, 'm': 0, 'k': 1, 'id_0': 0, 'id_1': 1, 'id_2': 2, 'id_3': 3}, {'f': 1, 'g': 2, 'h': 3, 'i': 2, 'm': 3, 'k': 3, 'id_0': 0, 'id_1': 1, 'id_2': 2, 'id_3': 3}, {('g', 'f'): 'i', ('h', 'g'): 'k', ('h', 'i'): 'm', ('k', 'f'): 'm', ('f', 'id_0'): 'f', ('i', 'id_0'): 'i', ('m', 'id_0'): 'm', ('id_0', 'id_0'): 'id_0', ('id_1', 'f'): 'f', ('g', 'id_1'): 'g', ('k', 'id_1'): 'k', ('id_1', 'id_1'): 'id_1', ('id_2', 'g'): 'g', ('h', 'id_2'): 'h', ('id_2', 'i'): 'i', ('id_2', 'id_2'): 'id_2', ('id_3', 'h'): 'h', ('id_3', 'm'): 'm', ('id_3', 'k'): 'k', ('id_3', 'id_3'): 'id_3'}), ({'f': 0, 'g': 1, 'h': 2, 'i': 0, 'm': 0, 'k': 1, 'id_0': 0, 'id_1': 1, 'id_2': 2, 'id_3': 3}, {'f': 1, 'g': 2, 'h': 3, 'i': 2, 'm': 3, 'k': 3, 'id_0': 0, 'id_1': 1, 'id_2': 2, 'id_3': 3}, {('g', 'f'): 'i', ('h', 'g'): 'k', ('h', 'i'): 'm', ('k', 'f'): 'm', ('f', 'id_0'): 'f', ('i', 'id_0'): 'i', ('m', 'id_0'): 'm', ('id_0', 'id_0'): 'id_0', ('id_1', 'f'): 'f', ('g', 'id_1'): 'g', ('k', 'id_1'): 'k', ('id_1', 'id_1'): 'id_1', ('id_2', 'g'): 'g', ('h', 'id_2'): 'h', ('id_2', 'i'): 'i', ('id_2', 'id_2'): 'id_2', ('id_3', 'h'): 'h', ('id_3', 'm'): 'm', ('id_3', 'k'): 'k', ('id_3', 'id_3'): 'id_3'}), {0: 0, 1: 1, 2: 2, 3: 3}, {'f': 'f', 'g': 'g', 'h': 'h', 'i': 'i', 'm': 'm', 'k': 'k', 'id_0': 'id_0', 'id_1': 'id_1', 'id_2': 'id_2', 'id_3': 'id_3'})\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(F)"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
