--- a/computationalCategories/categories.ipynb
+++ b/computationalCategories/categories.ipynb
@@ -168,6 +168,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class StrictTwoCategory:\n",
+    "    def __init__(self, zeroCells:list, hom:dict, identityMap:dict, comp:dict) -> None:\n",
+    "        self.zeroCells = zeroCells\n",
+    "        self.hom = hom\n",
+    "        self.identityMap = identityMap\n",
+    "        self.comp = comp\n",
+    "        \n",
+    "    def __repr__(self) -> str:\n",
+    "        return self.__str__()\n",
+    "    \n",
+    "    def __str__(self) -> str:\n",
+    "        return str((self.cells_0, self.homs, self.identityMap, self.comp))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "src = {\"1_01_0\": 0}\n",
+    "target = {\"1_01_0\": 1}\n",
+    "cTwo = Category(src, target, {}, {})\n",
+    "\n",
+    "zeroCells = [0,1]\n",
+    "hom = {(0,0):cTwo, (1,1):cTwo, (0,1):cTwo}\n",
+    "identityMap = {0:0, 1:0}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "({'1_01_0': 0, 'id_0': 0, 'id_1': 1}, {'1_01_0': 1, 'id_0': 0, 'id_1': 1}, {('1_01_0', 'id_0'): '1_01_0', ('id_0', 'id_0'): 'id_0', ('id_1', '1_01_0'): '1_01_0', ('id_1', 'id_1'): 'id_1'})"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cTwo"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
