--- a/computationalCategories/categories.ipynb
+++ b/computationalCategories/categories.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import copy"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 107,
    "metadata": {},
    "outputs": [],
@@ -188,37 +197,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
     "src = {\"1_01_0\": 0}\n",
     "target = {\"1_01_0\": 1}\n",
     "cTwo = Category(src, target, {}, {})\n",
+    "''' \n",
+    "\n",
+    "# hom sets are the group Z2\n",
+    "src = {\"2_00_1\": 0, \"id0\": 0}\n",
+    "target = {\"2_00_1\": 0, \"id0\": 0}\n",
+    "comp = {(\"id0\", \"id0\"):\"id0\", (\"id0\", \"2_00_1\"): \"2_00_1\", (\"2_00_1\", \"id0\"): \"2_00_1\", (\"2_00_1\", \"2_00_1\"): \"id0\"}\n",
+    "z2 = Category(src, target, comp, {0:\"id0\"})\n",
     "\n",
     "zeroCells = [0,1]\n",
-    "hom = {(0,0):cTwo, (1,1):cTwo, (0,1):cTwo}\n",
-    "identityMap = {0:0, 1:0}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "({'1_01_0': 0, 'id_0': 0, 'id_1': 1}, {'1_01_0': 1, 'id_0': 0, 'id_1': 1}, {('1_01_0', 'id_0'): '1_01_0', ('id_0', 'id_0'): 'id_0', ('id_1', '1_01_0'): '1_01_0', ('id_1', 'id_1'): 'id_1'})"
-      ]
-     },
-     "execution_count": 115,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cTwo"
+    "hom = {(0,0):z2, (1,1):z2, (0,1):z2}\n",
+    "identityMap = {0:0, 1:0}\n",
+    "\n",
+    "\n",
+    "F000 = Functor(productCategory(z2,z2), z2, {(0,0):0}, {(\"id0\",\"id0\"): \"id0\", \n",
+    "                                                       (\"id0\", \"2_00_1\"): \"id0\", \n",
+    "                                                       (\"2_00_1\", \"id0\"): \"id0\", \n",
+    "                                                       (\"2_00_1\", \"2_00_1\"): \"id0\"})\n",
+    "F100 = copy.deepcopy(F000)\n",
+    "F110 = copy.deepcopy(F000)\n",
+    "F111 = copy.deepcopy(F000)\n",
+    "\n",
+    "comp = {(0,0,0):F000, (1,0,0):F100, (1,1,0):F110, (1,1,1): F111}\n",
+    "strict2 = StrictTwoCategory(zeroCells, hom, identityMap, comp)"
    ]
   },
   {
