--- a/computationalCategories/categories.ipynb
+++ b/computationalCategories/categories.ipynb
@@ -187,12 +187,28 @@
     "        self.hom = hom\n",
     "        self.identityMap = identityMap\n",
     "        self.comp = comp\n",
+    "\n",
+    "        assert self.identityOneCell()\n",
+    "        assert self.identityTwoCell()\n",
+    "        assert self.strict2Identity()\n",
     "        \n",
     "    def __repr__(self) -> str:\n",
     "        return self.__str__()\n",
     "    \n",
     "    def __str__(self) -> str:\n",
-    "        return str((self.cells_0, self.homs, self.identityMap, self.comp))"
+    "        return str((self.cells_0, self.homs, self.identityMap, self.comp))\n",
+    "    \n",
+    "    def identityOneCell(self):\n",
+    "        for zeroCellIdentity in self.zeroCells:\n",
+    "            for zeroCell in self.zeroCells:\n",
+    "                pass \n",
+    "\n",
+    "    def identityTwoCell(self):\n",
+    "        pass\n",
+    "    \n",
+    "    def strict2Associativity(self):\n",
+    "        pass\n",
+    "\n"
    ]
   },
   {
@@ -219,8 +235,8 @@
     "\n",
     "\n",
     "F000 = Functor(productCategory(z2,z2), z2, {(0,0):0}, {(\"id0\",\"id0\"): \"id0\", \n",
-    "                                                       (\"id0\", \"2_00_1\"): \"id0\", \n",
-    "                                                       (\"2_00_1\", \"id0\"): \"id0\", \n",
+    "                                                       (\"id0\", \"2_00_1\"): \"2_00_1\", \n",
+    "                                                       (\"2_00_1\", \"id0\"): \"2_00_1\", \n",
     "                                                       (\"2_00_1\", \"2_00_1\"): \"id0\"})\n",
     "F100 = copy.deepcopy(F000)\n",
     "F110 = copy.deepcopy(F000)\n",
